fix bug: 考虑auto_increment与索引之间的关系, 避免生成的补丁运行错误